@@ -321,6 +321,7 @@ EOF
     cat >> ${CRON_SPOOL_DIR}/root <<EOF
 # ${PROG_NAME}: Cleanup Cluebringer database
 1   3   *   *   *   ${CLUEBRINGER_BIN_CBPADMIN} --config=${CLUEBRINGER_CONF} --cleanup >/dev/null
+
 EOF
     # Tips.
     cat >> ${TIP_FILE} <<EOF
